# dgm-study-assistant

./: .env  .env.example  .gitignore  README.md  build_index.py  evaluate_rag.py  evaluation_results_synth.json  evaluation_results_synth1.json  gen.py  pyproject.toml
faiss_index/: index.pkl
faiss_index_transcripts/: index.pkl
src/: config.py
src/dgm_study_assistant/: config.py
src/dgm_study_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dgm_study_assistant/evaluation/: README.md  __init__.py  evaluate_rag.py  evaluator.py  requirements.txt  synthetic_generator.py
src/dgm_study_assistant/llm/: provider.py
src/dgm_study_assistant/rag/: loader.py
src/dgm_study_assistant/rag/data/gen_transcripts/: Deep Generative Models 2024 - Lecture 10_2025-11-16_23-29-08.txt  Deep Generative Models 2024 - Lecture 11_2025-11-16_23-42-16.txt  Deep Generative Models 2024 - Lecture 12_2025-11-16_23-52-57.txt  Deep Generative Models 2024 - Lecture 13_2025-11-17_00-06-28.txt  Deep Generative Models 2024 - Lecture 1_2025-11-16_23-16-20.txt  Deep Generative Models 2024 - Lecture 2_2025-11-17_00-21-54.txt  Deep Generative Models 2024 - Lecture 3_2025-11-17_00-38-07.txt  Deep Generative Models 2024 - Lecture 4_2025-11-17_11-48-38.txt  Deep Generative Models 2024 - Lecture 5_2025-11-17_12-02-09.txt  Deep Generative Models 2024 - Lecture 6_2025-11-17_12-16-21.txt  Deep Generative Models 2024 - Lecture 7_2025-11-17_12-31-12.txt  Deep Generative Models 2024 - Lecture 8_2025-11-17_12-43-43.txt  Deep Generative Models 2024 - Lecture 9_2025-11-17_12-48-09.txt
src/llm/: provider.py
ui/: app.py
