[project]
name = "dgm-study-assistant"
version = "0.1.0"
description = "RAG-powered study assistant for Deep Generative Models"
authors = [
    { name="Shahar Tavor"},
    { name = "Nave Tseva" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.1.0",
    "gradio>=4.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[tool.uv]