[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dgm-study-assistant"
version = "0.1.0"
description = "Simple LangChain-based chatbot for Deep Generative Models"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Shahar Tavor" },
  { name = "Nave Tseva" }
]

dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.1.0",
    "gradio>=4.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "faiss-cpu>=1.7.4"
]

[tool.hatch.build]
packages = ["src/dgm_study_assistant"]
